--- a/article/index.html
+++ b/article/index.html
@@ -47,8 +47,8 @@
     </p>
     <p>
       Первым делом давайте создадим слайдер. Я воспользуюсь готовым решением,
-      одим из самых популярных сд=лайднеров на JQuery - Slick Carousel.
-      Подключаем все необходимые ресурсы руководквлюясь инструкцией
+      одним из самых популярных слайдеров на JQuery - Slick Carousel.
+      Подключаем все необходимые ресурсы руководствуясь инструкцией
       с официального сайта
       <a href="https://kenwheeler.github.io/slick/">kenwheeler.github.io/slick</a>.
     </p>
@@ -91,15 +91,15 @@
 
     <p>
       Наш слайдер работает. Теперь выключем JS и посмотрим на результат.
-      (если вы будете смотреть примеры на CodePan, до добавте в конец URL нарамерты <kbd>?turn_off_js=true</kbd>
+      (если вы будете смотреть примеры на CodePan, добавьте в конец URL нарамерты <kbd>?turn_off_js=true</kbd>
       чтобы отключить JS)
     </p>
     <iframe src="https://codepen.io/y_kosovych/pen/eYNZEbr?turn_off_js=true" width="960" height="600" frameborder="0"></iframe>
     <p>
-      При выключенном JS скрипт Slick Carousel не сработывает (что логично), а значит не добавляет свои классы и дополнительные
-      элементы. Слады выстроились один под одним, согласно блочной модели. Теперь мы может начать писать fallback для клайдера.
+      При выключенном JS скрипт Slick Carousel не сработает (что логично), а значит не добавляет свои классы и дополнительные
+      элементы. Слады выстроились один под одним, согласно блочной модели. Теперь мы может начать писать fallback для слайдера.
       В продакшн коде вы можете подключить CSS в
-      <kbd><code>&lt;head&gt;</code></kbd> с помошью тега <kbd><code>&lt;noscript&gt;</code></kbd>
+      <kbd><code>&lt;head&gt;</code></kbd> с помощью тега <kbd><code>&lt;noscript&gt;</code></kbd>
     </p>
     <img src="./img/carbon_6.png" alt="">
     <p>
@@ -121,7 +121,7 @@
     <img src="./img/carbon_9.png" alt="">
 
     <p>
-      Вот и все, наш сладер assesible и работает без JS :)
+      Вот и все, наш сладер accessible и работает без JS :)
     </p>
 
     <iframe src="https://codepen.io/y_kosovych/pen/RwPaBGx?turn_off_js=true" width="960" height="600" frameborder="0"></iframe>
