--- a/article/index.html
+++ b/article/index.html
@@ -72,7 +72,7 @@
 
     <p>
       Следующим шагом будет добавление ссылок, которые послужат нам навигацией для
-      сладера и основным инструментом для обеспечания его работы с отключенным JS.
+      слайдера и основным инструментом для обеспечения его работы с отключенным JS.
     </p>
 
     <img src="./img/carbon_3.png" alt="">
@@ -90,14 +90,14 @@
     <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
     <p>
-      Наш слайдер работает. Теперь выключем JS и посмотрим на результат.
-      (если вы будете смотреть примеры на CodePan, добавьте в конец URL нарамерты <kbd>?turn_off_js=true</kbd>
+      Наш слайдер работает. Теперь выключаем JS и посмотрим на результат.
+      (если вы будете смотреть примеры на CodePan, добавьте в конец URL параметры <kbd>?turn_off_js=true</kbd>
       чтобы отключить JS)
     </p>
     <iframe src="https://codepen.io/y_kosovych/pen/eYNZEbr?turn_off_js=true" width="960" height="600" frameborder="0"></iframe>
     <p>
       При выключенном JS скрипт Slick Carousel не сработает (что логично), а значит не добавляет свои классы и дополнительные
-      элементы. Слады выстроились один под одним, согласно блочной модели. Теперь мы может начать писать fallback для слайдера.
+      элементы. Слайды выстроились один под одним, согласно блочной модели. Теперь мы может начать писать fallback для слайдера.
       В продакшн коде вы можете подключить CSS в
       <kbd><code>&lt;head&gt;</code></kbd> с помощью тега <kbd><code>&lt;noscript&gt;</code></kbd>
     </p>
