--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello word</h1>
+  <a href="./article/index.html">Не вижу JS - не вижу препятствий!</a>
+  <a href="./css-grid/index.html">CSS grid</a>
+  <a href="./mg/index.html">Marceting Gamers</a>
+  <a href="./moto/index.html">Moto</a>
+  <a href="./index.html">Musician</a>
+  <a href="./notebook/index.html">Notebook</a>
+  <a href="./road/index.html">Road</a>
 </body>
 </html>
