--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
 </head>
 <body>
   <a href="./article/index.html">Не вижу JS - не вижу препятствий!</a>
+  <br>
   <a href="./css-grid/index.html">CSS grid</a>
+  <br>
   <a href="./mg/index.html">Marceting Gamers</a>
+  <br>
   <a href="./moto/index.html">Moto</a>
+  <br>
   <a href="./index.html">Musician</a>
+  <br>
   <a href="./notebook/index.html">Notebook</a>
+  <br>
   <a href="./road/index.html">Road</a>
+  <br>
+  <a href="./instaplus/index.html">instaplus/index</a>
+  <br>
+  <a href="./instaplus/widgets-card.html">instaplus/widgets-card</a>
+  <br>
+  <a href="./instaplus/active-user.html">instaplus/active-user</a>
 </body>
 </html>
