--- a/instaplus/active-user.html
+++ b/instaplus/active-user.html
@@ -56,7 +56,7 @@
                   <!-- меняйте путь к катинке в зависимости от способа оплаты -->
                   <div
                     class="main-select__filed-wrap"
-                    style="background-image: url('/img/payment/visa_icon_100.png');"
+                    style="background-image: url('./img/payment/visa_icon_100.png');"
                   >
                     <select class="main-select__filed" name="payment-method">
                       <option value="visa" selected>Visa</option>
