--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
   <br>
   <a href="./road/index.html">Road</a>
   <br>
-  <a href="./instaplus/index.html">instaplus/index</a>
-  <br>
-  <a href="./instaplus/widgets-card.html">instaplus/widgets-card</a>
-  <br>
-  <a href="./instaplus/active-user.html">instaplus/active-user</a>
+  <a href="./star-proto/index.html">star-proto</a>
 </body>
 </html>
