--- a/star-proto/index.html
+++ b/star-proto/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/src.9ad09f98.css">
-<script src="/src.9ad09f98.js"></script></head>
+    <link rel="stylesheet" href="./src.9ad09f98.css">
+<script src="./src.9ad09f98.js"></script></head>
 <body>
 
     <button id="menu">
@@ -32,6 +32,6 @@
         </div>
     </div>
 
-    <script src="/src.e31bb0bc.js"></script>
+    <script src="./src.e31bb0bc.js"></script>
 </body>
 </html>
